<resources>
    <string name="app_name">BFV-Intel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Navigation drawer -->
    <string name="nav_soldier_name">Soldier name</string>
    <string name="nav_soldier_current_rank">Current rank</string>

    <string name="nav_menu_overview">Overview</string>
    <string name="nav_menu_weapons">Weapons</string>
    <string name="nav_menu_vehicles">Vehicles</string>
    <string name="nav_menu_codex">Codex</string>
    <string name="nav_menu_medals">Medals</string>

    <string name="nav_menu_search">Search</string>
    <string name="nav_menu_find_soldier">Find Soldier</string>

    <string name="nav_menu_about">About</string>
    <string name="nav_menu_app_info">App info</string>
    <string name="nav_menu_changelog">Changelog</string>
    <string name="nav_menu_credits">Credits</string>
    <string name="nav_menu_licences">Licences</string>
    <string name="nav_menu_settings">Settings</string>
</resources>
