<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/overview_dest"
            android:icon="@drawable/ic_menu_overview"
            android:title="@string/nav_menu_overview" />
        <item
            android:id="@+id/classes_dest"
            android:icon="@drawable/ic_menu_classes"
            android:title="@string/nav_menu_classes" />
        <item
            android:id="@+id/weapons_list_dest"
            android:icon="@drawable/ic_menu_weapons"
            android:title="@string/nav_menu_weapons" />
        <item
            android:id="@+id/vehicles_list_dest"
            android:icon="@drawable/ic_menu_vehicles"
            android:title="@string/nav_menu_vehicles" />
    </group>

    <item android:title="@string/nav_menu_search">
        <menu>
            <item
                android:id="@+id/nav_find_soldier"
                android:icon="@drawable/ic_menu_search"
                android:title="@string/nav_menu_find_soldier" />
        </menu>
    </item>

    <item android:title="@string/nav_menu_about">
        <menu>
            <item
                android:id="@+id/nav_app_info"
                android:icon="@drawable/ic_menu_app_info"
                android:title="@string/nav_menu_app_info" />
            <item
                android:id="@+id/nav_changelog"
                android:icon="@drawable/ic_menu_changelog"
                android:title="@string/nav_menu_changelog" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_menu_settings" />
            <item
                android:id="@+id/nav_credits"
                android:title="@string/nav_menu_credits" />
            <item
                android:id="@+id/nav_licences"
                android:title="@string/nav_menu_licences" />
        </menu>
    </item>

</menu>
